# fastapi-qa-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/benchmark/: questions.jsonl
scripts/: clone_repo.sh
server/: app.py
src/: config.py
src/agent/: baseline.py  loop.py
src/eval/: mine_benchmark.py  run_eval.py
src/retrieval/: bm25.py  build_indexes.py  chunker.py  dense.py  hybrid.py  walker.py
src/tools/: impl.py  schemas.py
tests/: test_eval_and_server.py  test_retrieval.py
ui/: app.py
